--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
 		"bower_components"
 	],
 	"dependencies": {
-		"jquery": "~1.11.3"
+		"jquery": "~1.11.3",
+		"material-design-lite": "~1.0.6"
 	},
 	"devDependencies": {
 	}
