--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
 		"bower_components"
 	],
 	"dependencies": {
-		"material-design-lite": "~1.0.6"
+		"bootstrap": "~3.3.6"
 	},
 	"devDependencies": {
 	}
